assets/less/new/components/buttons.less
/* Remove some list padding */
.download-dumb > ul {
  padding: 0;
}
.download-button > ul {
  padding: 0;
}

// Just some temp styling
.header-download {
  font-weight: 500;
  .download-link.btn-download:after {
    background: transparent;
  }
}
.header-donate {
  a.btn {
    padding: .5em 1em;
  }

  a.btn::after {
    background: transparent;
  }

  svg {
    width: 1rem;
  }
}

.btn-donate,
.btn-donate-lg,
.btn-download-inline,
.btn-download-link,
.download-link.btn-download,
a.btn,
button {
  font-size: 1rem;
  background: var(--btn-bg, transparent);
  border-radius: 6px;
  border: .12em solid currentColor;
  color: currentColor;
  padding: .5em 3em;
  position: relative;
  transition: font-size .2s;
  text-decoration: none;
  white-space: nowrap;
}

.btn-donate::before,
.btn-donate-lg::before,
.btn-download-inline::before,
.btn-download-link::before,
.download-link.btn-download::before,
a.btn::before {
  content: '';
  position: absolute;
  background: var(--glow);
  border-radius: 50%;
  filter: blur(32px);
  opacity: .25;
  inset: -.25em -5em;
  z-index: -2;
}

.btn-donate::after,
.btn-donate-lg::after,
.btn-download-inline::after,
.btn-download-link::after,
.download-link.btn-download::after,
a.btn::after {
  content: '';
  position: absolute;
  background-color: transparent;
  background-image: radial-gradient(circle, var(--accent), var(--color-purple-60) 30%);
  background-size: 400%;
  background-position: center;
  opacity: .5;
  inset: 0;
  z-index: -1;
  transition: all .3s;
}

.download-link.btn-download:hover::after,
a.btn:hover::after,
button:hover::after {
  opacity: .75;
  background-size: 500%;
}

/** HACK for Mozilla Firefox */
@-moz-document url-prefix() {
  .download-link.btn-download::after {
    inset-inline-end: 4px;
  }
}

.download-button .ios-download,
.download-button .linux-arm-download,
.download-button .unrecognized-download,
.download-button .unsupported-download,
.download-button .unsupported-download-osx,
.download-button .nojs-download {
  display: none;
}
.download-button .os_msi,
.download-button .os_winsha1,
.download-button .os_win64,
.download-button .os_linux,
.download-button .os_linux64,
.win7up.x86.x64 .download-button .os_win,
.android .download-button-desktop,
.windows.arm .download-button .os_win,
.linux.arm .download-button .os_linux,
.linux.x86.x64 .download-list .os_linux,
.download-button .os_win,
.download-button .os_osx,
.download-button .os_android,
.download-button .os_ios,
.no-js .download-list,
.other .download-list {
  display: none !important;
}
.win7up.x86.x64 .download-button .os_win64,
.linux .download-button .os_linux,
.linux.x86.x64 .download-button .os_linux64,
.windows .download-button .os_win,
.osx .download-button .os_osx,
.android .download-button .os_android,
.download-button-android .os_android,
.android .download-button-desktop .download-list,
.android .download-button-desktop small.os_win,
.download-button-ios .os_ios,
.ios .download-button .os_ios,
.ios .download-button .ios-download,
.ios .download-button-desktop .download-list,
.other .download-button-android .download-list,
.other .download-button small.os_win {
  display: block !important;
}
.windows.arm .download-button .unsupported-download,
.linux.arm .download-button .linux-arm-download,
.chromeos .download-button .unsupported-download,
.oldwin .download-button .unsupported-download,
.oldmac .download-button .unsupported-download {
  display: block;
  max-width: 250px;
}
.windows.arm .download-button .fx-privacy-link,
.linux.arm .download-button .fx-privacy-link,
.chromeos .download-button .fx-privacy-link,
.oldwin .download-button .fx-privacy-link,
.oldmac .download-button .fx-privacy-link {
  display: none;
}
.android .download-button-desktop .nojs-download,
.ios .download-button-desktop .nojs-download,
.no-js .download-button .nojs-download {
  display: block;
}
.other .download-button .unrecognized-download {
  display: block;
}
.download-button .download-list .os_android.x86,
.download-button .download-other.os_android .api-15,
.android.x86 .download-button .download-list .os_android.armv7up,
.android.x86 .download-button .download-other.os_android .x86 {
  display: none !important;
}
.android.x86 .download-button .download-list .os_android.x86 {
  display: block !important;
}
.android.x86 .download-button .download-other.os_android .armv7up {
  display: inline !important;
}
.windows.sha-1 .download-button .os_win {
  display: none !important;
}
.windows.sha-1 .download-button .os_winsha1 {
  display: block !important;
}

.download-button ul {
  list-style: none;
}

.download-button ul li {
  margin-block: 40px;
}

// Make the smart download button a bit larger
.download-button {
  margin: 2rem;
  .btn-download {
    font-size: var(--font-lg);
    font-weight: 400;
  }
}

